--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,7 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  
   "env": {
-    "NEXT_PUBLIC_APP_URL": {
-      "description": "Public application URL",
-      "required": false
-    }
+    "NEXT_PUBLIC_APP_URL": "https://hedamo-dashboard.vercel.app"
   }
 }
